package RelacionesRestantes.Ejercicio;

public class Evento {
    private String nombre;

    public Evento(String nombre){
        this.nombre = nombre;
    }

    public String getNombre(){
        return nombre;
    }
}
